# auburn

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic2d.rs  basic3d.rs  penetrates2d.rs  sdf2d.rs  sdfv2d.rs
src/: lib.rs
src/col/: ball.rs  bevy_transform.rs  mod.rs  point.rs  transform.rs
src/col1d/: ball1d.rs  box1d.rs  mod.rs
src/col2d/: ball2d.rs  box2d.rs  collider2d.rs  default_impls.rs  mod.rs  point2d.rs  poly2d.rs  rounded_box2d.rs  tilemap.rs  transform2d.rs
src/col2d/detection/: collides.rs  distance_to.rs  extreme_point.rs  mod.rs  penetrates.rs  sdf.rs  sdf_vector.rs  sdfv.rs  sdfv_common.rs  sdfv_minkowski.rs
src/col2d/poly2d/: gjk2d.rs  mod.rs
src/col2d/shape/: ball2d.rs  box2d.rs  ellipse2d.rs  mod.rs  point2d.rs  rounded_box2d.rs  tilemap.rs
src/col2d/shape/ball2d/: mod.rs  v_ball2d.rs  v_point.rs
src/col2d/shape/box2d/: mod.rs  v_ball.rs  v_box2d.rs  v_point.rs
src/col2d/shape/local_minkowski_diff/: mod.rs  v.rs
src/col2d/shape/minkowski_diff/: mod.rs  v.rs
src/col2d/shape/poly2d/: mod.rs  v_poly2d.rs
src/col2d/shape/rounded_box2d/: mod.rs  v_point.rs
src/col2d/transform2d/: axis_transform2d.rs  isotropic2d.rs  mod.rs  translate2d.rs
src/col2d/transformation2d/: axis_transform2d.rs  bevy_transform.rs  isotropic2d.rs  mod.rs  transform2d.rs  translate2d.rs
src/col3d/: ball3d.rs  box3d.rs  cylinder3d.rs  default_impls.rs  mod.rs  transform3d.rs
src/col3d/detection/: collides.rs  extreme_point.rs  mod.rs  penetrates.rs  sdf.rs  sdf_vector.rs  sdfv.rs
src/col3d/poly3d/: gjk3d.rs  mod.rs
src/col3d/shape/: ball3d.rs  box3d.rs  cylinder3d.rs  mod.rs  point3d.rs
src/col3d/transform3d/: axis_transform3d.rs  isotropic3d.rs  mod.rs  translate3d.rs
src/col3d/transformation3d/: axis_transform3d.rs  bevy_transform.rs  isotropic3d.rs  mod.rs  transform3d.rs  translate3d.rs
src/physics/: ball.rs  ball2d.rs  ball3d.rs  box2d.rs  box3d.rs  cylinder3d.rs  mod.rs  point.rs  poly2d.rs  rounded_box2d.rs  tilemap.rs  transform2d.rs  transform3d.rs
src/utils/: approx.rs  mod.rs  publisher.rs  rect2.rs
tests/: collider2d.rs  collision_box2d.rs  collision_box2d_v_ball2d.rs  collision_poly2d_v_poly2d.rs  common.rs  transform2d.rs
