[package]
name = "auburn"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fast and simple physics library."
repository = "https://github.com/lubomirkurcak/auburn/"
keywords = ["math", "physics", "geometry", "gamedev", "algorithm"]
categories = [
    "algorithms",
    "data-structures",
    "game-development",
    "mathematics",
    "simulation",
]

[features]
default = ["2d"]
2d = []
3d = []
std = []
serde = ["dep:serde", "dep:serde_json", "dep:serde_with"]
bevy = ["dep:bevy"]
gjk = []
tilemap = ["std", "serde", "dep:lk_math"]

[dependencies]
bevy = { version = "0.14.1", optional = true }
glam = "0.27.0"                                # matching bevy 0.12.1
lk_math = { version = "0.4.0", optional = true }
#lk_math = { path = "c:/repos/lk_math", default-features = true }
round-to = "0.1.0"
serde = { version = "1.0.195", optional = true }
serde_json = { version = "1.0.111", optional = true }
serde_with = { version = "3.4.0", optional = true }

[dev-dependencies]
approx = "0.5.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[[example]]
name = "basic2d"
required-features = ["2d"]

[[example]]
name = "basic3d"
required-features = ["3d"]

[[example]]
name = "penetrates2d"
required-features = ["2d"]

[[example]]
name = "sdf2d"
required-features = ["2d"]

[[example]]
name = "sdfv2d"
required-features = ["2d"]
